// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalContent Component allows external styles to be added 1`] = `
<WithStyles(DialogContent)
  className="testClassRoot undefined"
>
  <WithStyles(Component)
    variant="normalText"
  >
    Modal Content
  </WithStyles(Component)>
</WithStyles(DialogContent)>
`;

exports[`ModalContent Component should render correctly if opened 1`] = `
<WithStyles(DialogContent)
  className="undefined"
>
  <WithStyles(Component)
    variant="normalText"
  >
    Modal Content
  </WithStyles(Component)>
</WithStyles(DialogContent)>
`;

exports[`ModalContent withStyles should render correctly 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <WithStyles(ModalContent)>
      Modal Content
    </WithStyles(ModalContent)>
  </HvProvider>
</JssProvider>
`;
